# seny

./: .env.example  .gitattributes  .gitignore  .markdownlint.json  .openapi-generator-ignore  .pre-commit-config.yaml  DASHBOARD — Рабочее пространство (MVP-версия).md  README.md  SSL-SETUP.md  analiz.html  nginx_seny_config.conf  openapi-generator-config.yaml  package-lock.json  package.json  rulles  seny-backend.service  setup-production.sh  setup-ssl.sh  Карточка Номенклатуры (эталонная сущность).md  Карточка Позиции (MVP) — обновлённая и расширенная модель.md  Карточка “Тендер” (Tender).md  План эволюционного развития.md  анализ текущего состояния.md
backend/: README.md  alembic.ini  check_user.py  fix_customers.py  fix_terms.py  openapi.json  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  redis.py  security.py  storage.py
backend/app/db/: base.py  init_db.py  session.py
backend/migrations/: env.py
backend/migrations/versions/: 110cfe9a8b04_add_user_model.py  14a3405216d4_merge_heads_after_node_versions.py  1cafd6f33732_add_terms_to_tender.py  21502979c246_merge_heads.py  3c1e729f3c2f_extend_audit_logs_for_nomenclature.py  6902cc744a95_add_tender_files_and_audit_logs.py  6b8afc3adf52_add_nomenclature_and_user_models.py  6df63f8f93dd_add_class_attribute_revisions.py  707fc7c74066_merge_heads_after_search_improvements.py  734112275faa_nomenclature_rebuild.py  (+8 more)
backend/scripts/: export_openapi.py
backend/tests/: test_nomenclature_card_service.py  test_nomenclature_lifecycle_service.py  test_schema_registry.py
(+121 files in other folders)
